nixidy/generated/prod/homepage/Service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    app.kubernetes.io/service: homepage
  name: homepage
  namespace: home
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: ClusterIP
